<resources>
    <string name="app_name">Movies</string>
    <string name="error_no_favorites">You do not have added any favorite movies yet.</string>
    <string name="error_message">An error occurred</string>
    <string name="error_message_no_connection">No connection available</string>
    <string name="movie_image">Movie\'s image</string>
    <string name="rating_star">Rating star</string>
    <string name="release_icon">Release icon</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="order_settings">Order Settings</string>
    <!-- Order-By Preference -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_popular_value</string>
    <!-- order-by most popular option -->
    <string name="settings_order_by_most_popular_label">Most Popular</string>
    <string name="settings_order_by_most_popular_value" translatable="false">popular</string>
    <!-- order-by top rated option -->
    <string name="settings_order_by_top_rated_label">Top Rated</string>
    <string name="settings_order_by_top_rated_value" translatable="false">top_rated</string>
    <!-- show favorite option -->
    <string name="settings_order_by_favorite_label">Favorite</string>
    <string name="settings_order_by_favorite_value" translatable="false">favorite</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="detail_activity_extra">Review</string>
</resources>