<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6f2ff"
    tools:context="com.example.anfio.popularmovies.ui.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.anfio.popularmovies.ui.DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_movie_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_image" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/star_black"
                    style="@style/ImageStyle"
                    android:layout_below="@+id/tv_title"
                    android:contentDescription="@string/rating_star"
                    android:src="@drawable/ic_star_black_24dp" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/TextViewStyle"
                    android:layout_below="@id/tv_title"
                    android:layout_toEndOf="@+id/star_black" />

                <ImageView
                    android:id="@+id/today_black"
                    style="@style/ImageStyle"
                    android:layout_below="@+id/star_black"
                    android:contentDescription="@string/release_icon"
                    android:src="@drawable/ic_today_black_24dp" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/TextViewStyle"
                    android:layout_below="@id/star_black"
                    android:layout_toEndOf="@+id/today_black" />

                <ImageView
                    android:id="@+id/iv_fav_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/today_black"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/movie_image"
                    android:src="@drawable/ic_favorite_border_black_48dp" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_videos"
            style="@style/TextViewDetailStyle"
            android:text="@string/videos" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextViewDetailStyle"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.1"
            android:padding="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_reviews"
            style="@style/TextViewDetailStyle"
            android:text="@string/reviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>